[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/HUD.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="InputEventAction" id=4]
action = "ui_select"

[sub_resource type="ShortCut" id=5]
shortcut = SubResource( 4 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="score" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -78.0
margin_right = 86.0
margin_bottom = 78.0
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1
valign = 1

[node name="message" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -193.5
margin_top = -58.5
margin_right = 193.5
margin_bottom = 58.5
custom_fonts/font = SubResource( 2 )
text = "Desvie e sobreviva aos 
monstros"
align = 1
valign = 1
autowrap = true

[node name="message_timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="button_start" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -100.0
margin_top = -90.0
margin_right = 100.0
margin_bottom = -30.0
custom_fonts/font = SubResource( 3 )
shortcut = SubResource( 5 )
text = "Start"

[connection signal="timeout" from="message_timer" to="." method="_on_message_timer_timeout"]
[connection signal="pressed" from="button_start" to="." method="_on_button_start_pressed"]
